@@ -77,7 +77,7 @@
         <dependency>
             <groupId>org.testfx</groupId>
             <artifactId>openjfx-monocle</artifactId>
-            <version>11.0.2</version>
+            <version>jdk-12.0.1+2</version>
             <scope>test</scope>
          </dependency>
     </dependencies>
@@ -131,6 +131,27 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.starlight.App</mainClass>
+                    <commandlineArgs>
+                        --add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                        --add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                        --add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED
+                        --add-exports=javafx.base/com.sun.javafx.logging=ALL-UNNAMED
+                        --add-exports=javafx.graphics/com.sun.glass.ui=org.testfx
+                        --add-opens=javafx.graphics/com.sun.glass.ui.monocle=ALL-UNNAMED
+                        --add-opens=javafx.graphics/com.sun.javafx.scene.control=ALL-UNNAMED
+                        --add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED
+                        --add-opens=javafx.graphics/com.sun.glass.ui.monocle.input.devices=ALL-UNNAMED
+                        --add-opens=javafx.graphics/com.sun.glass.ui.monocle=org.testfx
+                        --add-exports=javafx.graphics/com.sun.glass.ui.monocle=ALL-UNNAMED
+                        --add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED,org.testfx.monocle
+                        --add-opens=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED
+                        --add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED
+                        --add-exports=javafx.graphics/com.sun.glass.ui.monocle.input=ALL-UNNAMED
+                        --add-exports=javafx.graphics/com.sun.glass.ui.monocle.input.devices=ALL-UNNAMED
+                        --add-opens=javafx.graphics/com.sun.javafx.application.HostServicesDelegate=ALL-UNNAMED
+                    </commandlineArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -141,6 +162,28 @@
                     <argLine>
                         --add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                         --add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                        --add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                        --add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED
+                        --add-exports=javafx.base/com.sun.javafx.logging=ALL-UNNAMED
+                        --add-exports=javafx.graphics/com.sun.glass.ui=org.testfx
+                        --add-opens=javafx.graphics/com.sun.glass.ui.monocle=ALL-UNNAMED
+                        --add-opens=javafx.graphics/com.sun.javafx.scene.control=ALL-UNNAMED
+                        --add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED
+                        --add-opens=javafx.graphics/com.sun.glass.ui.monocle.input.devices=ALL-UNNAMED
+                        --add-opens=javafx.graphics/com.sun.glass.ui.monocle=org.testfx
+                        --add-exports=javafx.graphics/com.sun.glass.ui.monocle=ALL-UNNAMED
+                        --add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED,org.testfx.monocle
+                        --add-opens=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED
+                        --add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED
+                        --add-exports=javafx.graphics/com.sun.glass.ui.monocle.input=ALL-UNNAMED
+                        --add-exports=javafx.graphics/com.sun.glass.ui.monocle.input.devices=ALL-UNNAMED
+                        --add-opens=javafx.graphics/com.sun.javafx.application.HostServicesDelegate=ALL-UNNAMED
+                        --add-opens=com.starlight/com.starlight=ALL-UNNAMED
+                        --add-opens=com.starlight/com.starlight.api=ALL-UNNAMED
+                        --add-opens=com.starlight/com.starlight.models=ALL-UNNAMED
+                        --add-opens=com.starlight/com.starlight.util=ALL-UNNAMED
+                        --add-opens=com.starlight/com.starlight.controller=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
